--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "http": "0.0.1-security",
     "js-yaml": "^3.13.1",
     "minimist": "^1.2.5",
+    "modbus-stream": "^0.44.0",
     "moment": "^2.24.0",
     "mqtt": "^3.0.0",
     "mysql": "^2.18.1",
